--- a/measurement/templates/measurement/child_results.html
+++ b/measurement/templates/measurement/child_results.html
@@ -39,9 +39,9 @@
         </div>
         
         <div class="mt-6">
-            <a href="{% url 'measurement:child_detail' result.measurement.child.id %}" 
+            <a href="{%url 'dashbord:parent_dashbord'%}" 
                class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">
-                Back to Child Profile
+                Back to Your Profile
             </a>
         </div>
     </div>
