--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,9 @@
                         <!-- Dropdown Menu -->
                         <div class="absolute top-full right-0 mt-2 w-48 bg-white rounded-md shadow-lg z-20 opacity-0 scale-95 group-hover:opacity-100 group-hover:scale-100 transition-all duration-200 ease-out origin-top-right">
                             <div class="py-1">
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
+                                {% comment %} <a href="#"  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                                     <i class="fas fa-user mr-2"></i>Profile
-                                </a>
+                                </a> {% endcomment %}
                                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                                     <i class="fas fa-cog mr-2"></i>Account Settings
                                 </a>
@@ -53,6 +53,7 @@
                 </div>
             </div>
         </div>
+        
     </nav>
 
     <!-- Main Content -->
@@ -67,5 +68,7 @@
             <p class="text-gray-600">© {% now "Y" %} Stunting Project. All Rights Reserved.</p>
         </div>
     </footer>
+    {% block extra_scripts %}{% endblock %}
+    
 </body>
 </html>
